@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <Folder Include="Interfaces\" />
+    <Folder Include="DTO\" />
     <Folder Include="Services\" />
   </ItemGroup>
 
