@@ -3,4 +3,6 @@
 3 - Transformando entidades Anêmicas em entidades ricas, ou seja, usando private set e transformando em entidade auto validadora.
 4 - Instalando o Fluent Validation e criando a primeira Validação, que é a UserValidator.
 5 - Criando Interface e implementações de Repositórios.
-6 - Instalando o pacote nuget "EntityFrameworkCore"
+6 - Instalando o pacote nuget "EntityFrameworkCore", "EntityFrameworkCore.Design", "EntityFrameworkCore.Tools"
+7 - Criando o UserMap para mapeamento das tabelas, organizando o contexto do banco de dados e também o Repositório de User
+8
